# USBCamera

./: CMakeLists.txt  README.md  readAndSave.cpp
